--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/gateway": "^2.0.5",
+    "@aws-sdk/client-s3": "^3.131.0",
+    "@aws-sdk/s3-request-presigner": "^3.131.0",
     "@metamask/eth-sig-util": "^4.0.1",
     "apollo-server": "^3.8.2",
     "cors": "^2.8.5",
