--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@usedapp/core": "^0.4.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@usedapp/core": "^1.1.2",
     "@web3-react/walletconnect-connector": "^6.2.0",
     "@web3-react/walletlink-connector": "^6.2.3",
     "blockies-ts": "^1.0.0",
@@ -38,10 +39,11 @@
     "ethers": "^5.1.4",
     "framer-motion": "^4",
     "graphql": "^15.3.0",
-    "lodash": "4.17.20",
-    "next": "^11.0.1",
+    "lodash": "^4.17.21",
+    "next": "^12.2.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
